docs(studio): apply notion like editor changes

--- a/docs/content/2.get-started.md
+++ b/docs/content/2.get-started.md
@@ -20,12 +20,15 @@ Add `@nuxtjs/supabase` dev dependency to your project:
 ```bash [pnpm]
 pnpm add -D @nuxtjs/supabase
 ```
+
 ```bash [yarn]
 yarn add --dev @nuxtjs/supabase
 ```
+
 ```bash [NPM]
 npm install @nuxtjs/supabase --save-dev
 ```
+
 ```bash [bun]
 bun add -D @nuxtjs/supabase
 ```
@@ -41,7 +44,7 @@ export default defineNuxtConfig({
 
 Add `SUPABASE_URL` and `SUPABASE_KEY` to the `.env`:
 
-```zsh [env]
+```bash [env]
 SUPABASE_URL="https://example.supabase.co"
 SUPABASE_KEY="<your_key>"
 ```
@@ -65,7 +68,7 @@ export default defineNuxtConfig({
 
 ### `url`
 
-Default: `process.env.SUPABASE_URL` (ex: https://example.supabase.co)
+Default: `process.env.SUPABASE_URL` (ex: <https://example.supabase.co>)
 
 The unique Supabase URL which is supplied when you create a new project in your project dashboard.
 
@@ -81,13 +84,11 @@ Default: `process.env.SUPABASE_SERVICE_KEY`
 
 Supabase 'service role key', has super admin rights and can bypass your Row Level Security.
 
-
 ### `redirect`
 
 Default: `true`
 
 Redirect automatically to the configured login page if a non authenticated user is trying to access a guarded. You can disable all redirects by setting this option to false.
-
 
 ### `redirectOptions`
 
@@ -101,10 +102,11 @@ Default:
     cookieRedirect: false,
   }
 ```
-- `login`: User will be redirected to this path if not authenticated or after logout. 
+
+- `login`: User will be redirected to this path if not authenticated or after logout.
 - `callback`: This is the path the user will be redirect to after supabase login redirection. Should match configured `redirectTo` option of your [signIn method](https://supabase.com/docs/reference/javascript/auth-signinwithoauth). Should also be configured in your Supabase dashboard under `Authentication -> URL Configuration -> Redirect URLs`.
 - `exclude`: Routes to exclude from the redirect. `['/foo', '/bar/*']` will exclude the `foo` page and all pages in your `bar` folder.
-- `cookieRedirect`: Sets a cookie containing the path an unauthenticated user tried to access. The cookie can then be used on the [`/confirm`](https://supabase.nuxtjs.org/authentication#confirm-page-confirm) page to redirect the user to the page they previously tried to visit. 
+- `cookieRedirect`: Sets a cookie containing the path an unauthenticated user tried to access. The cookie can then be used on the [`/confirm`](https://supabase.nuxtjs.org/authentication#confirm-page-confirm) page to redirect the user to the page they previously tried to visit.
 
 ### `cookieName`
 
@@ -121,11 +123,13 @@ Cookie name used for storing access and refresh tokens, added in front of `-acce
     secure: true
   }
 ```
+
 Options for cookies used to share tokens between server and client, refer to [cookieOptions](https://nuxt.com/docs/api/composables/use-cookie#options) for available settings. Please note that the lifetime set here does not determine the Supabase session lifetime.
 
 ### `clientOptions`
 
 Default:
+
 ```ts
   clientOptions: {
     auth: {
@@ -135,14 +139,16 @@ Default:
       autoRefreshToken: true
     },
   }
-  ```
+```
 
 Supabase client options [available here](https://supabase.com/docs/reference/javascript/initializing#parameters).
 
 ## Versions
 
 `0.1.x` versions are wrapped around `supabase-js v1`.
-<br>
+
+:br
+
 `1.x.x` versions are wrapped around `supabase-js v2`.
 
 ## Demo
