--- a/docs/content/3.authentication.md
+++ b/docs/content/3.authentication.md
@@ -1,7 +1,7 @@
 ---
 title: Authentication
 icon: heroicons:lock-closed
-description: 'Authenticate your user thanks to the PKCE Oauth protocol that enables secure exchange of refresh and access tokens between an application and the authorization server'
+description: Authenticate your user thanks to the PKCE Oauth protocol that enables secure exchange of refresh and access tokens between an application and the authorization server
 ---
 
 With the default options, the module requires a log-in page and a confirm page to handle the [PKCE authorization code flow](https://supabase.com/docs/guides/resources/glossary#pkce). If you want to understand how it works under the hood, you can read this [section](https://supabase.com/docs/guides/auth/server-side-rendering#understanding-the-authentication-flow).
@@ -14,8 +14,7 @@ For advanced users who want to implement the auth behaviour themselves, you can 
 
 ## Log-in page - `/login`
 
-Each time a user is trying to access a page that needs authentication, he will automatically be redirected to the configured log in page. If you want to allow access to "public" page, you just need to add them in the [exclude](/get-started#redirectoptions) redirect option. 
-
+Each time a user is trying to access a page that needs authentication, he will automatically be redirected to the configured log in page. If you want to allow access to "public" page, you just need to add them in the [exclude](/get-started#redirectoptions) redirect option.
 
 ::callout{icon="i-heroicons-exclamation-triangle-20-solid" color="amber"}
 Ensure to activate the authentication providers you want in the Supabase Dashboard under `Authentication -> Providers`.
@@ -61,24 +60,47 @@ The confirmation page receives the supabase callback. From there you can check t
 The redirect URL must be configured in your Supabase dashboard under `Authentication -> URL Configuration -> Redirect URLs`.
 ::
 
+```vue [pages/confirm.vue]
+<script setup lang="ts">
+const user = useSupabaseUser()
+
+watch(user, () => {
+  if (user.value) {
+      // Redirect to protected page
+      return navigateTo('/')
+  }
+}, { immediate: true })
+</script>
+
+<template>
+  <div>Waiting for login...</div>
+</template>
+```
+
+### Redirect path
+
+You can easily handle redirection to the initial requested route after login.
+
+::callout{icon="i-heroicons-light-bulb"}
+You must enable the `cookieRedirect` option of the [redirectOptions](/get-started#redirectoptions) to allow cookie storage and take benefit of this feature.
+::
 
 ```vue [pages/confirm.vue]
 <script setup lang="ts">
 const user = useSupabaseUser()
 
-// Pull in the config to get cookie details
-const config = useRuntimeConfig().public.supabase;
-const { cookieName } = config;
-const redirectPath = useCookie(`${cookieName}-redirect-path`).value;
-
+// Get redirect path from cookies
+const config = useRuntimeConfig().public.supabase.cookieName
+const redirectPath = useCookie(`${cookieName}-redirect-path`).value
 
 watch(user, () => {
   if (user.value) {
-      useCookie(`${cookieName}-redirect-path`).value = null // Clear the cookie
-      return navigateTo(redirectPath || '/'); // Redirect or go to protected page
+      // Clear cookie
+      useCookie(`${cookieName}-redirect-path`).value = null
+      // Redirect to path
+      return navigateTo(redirectPath || '/'); 
   }
 }, { immediate: true })
-
 </script>
 <template>
   <div>Waiting for login...</div>
