--- a/docs/content/4.usage/services/1.serverSupabaseClient.md
+++ b/docs/content/4.usage/services/1.serverSupabaseClient.md
@@ -3,9 +3,8 @@ title: serverSupabaseClient
 description: Make requests to the Supabase API on server side with the serverSupabaseClient service
 ---
 
-
-::callout{icon="i-heroicons-exclamation-triangle-20-solid" color="amber"}
- This section assumes you're familiar with [Nitro](https://v3.nuxtjs.org/guide/concepts/server-engine), the server engine powered by Nuxt.
+::callout{color="amber" icon="i-heroicons-exclamation-triangle-20-solid"}
+This section assumes you're familiar with [Nitro](https://v3.nuxtjs.org/guide/concepts/server-engine), the server engine powered by Nuxt.
 ::
 
 This function is working similary as the [useSupabaseClient](/usage/composables/usesupabaseclient) composable but is designed to be used in [server routes](https://nuxt.com/docs/guide/directory-structure/server#server-routes).
