--- a/docs/content/4.usage/services/2.serverSupabaseServiceRole.md
+++ b/docs/content/4.usage/services/2.serverSupabaseServiceRole.md
@@ -1,14 +1,15 @@
 ---
 title: serverServiceRole
 description: Make requests with super admin rights to the Supabase API with the serverSupabaseServiceRole service
-navigation.title: serverSupabaseServiceRole
+navigation:
+  title: serverSupabaseServiceRole
 ---
 
-::callout{icon="i-heroicons-exclamation-triangle-20-solid" color="amber"}
- This section assumes you're familiar with [Nitro](https://v3.nuxtjs.org/guide/concepts/server-engine), the server engine powered by Nuxt.
+::callout{color="amber" icon="i-heroicons-exclamation-triangle-20-solid"}
+This section assumes you're familiar with [Nitro](https://v3.nuxtjs.org/guide/concepts/server-engine), the server engine powered by Nuxt.
 ::
 
-This function is designed to work only in [server routes](https://nuxt.com/docs/guide/directory-structure/server#server-routes), there is no vue composable equivalent. 
+This function is designed to work only in [server routes](https://nuxt.com/docs/guide/directory-structure/server#server-routes), there is no vue composable equivalent.
 
 It works similary as the [serverSupabaseClient](/usage/services/serversupabaseclient) but it provides a client with super admin rights that can bypass your [Row Level Security](https://supabase.com/docs/guides/auth/row-level-security).
 
