--- a/docs/content/4.usage/services/3.serverSupabaseUser.md
+++ b/docs/content/4.usage/services/3.serverSupabaseUser.md
@@ -3,8 +3,8 @@ title: serverSupabaseUser
 description: Get your Supabase user from serverside with the serverSupabaseUser service
 ---
 
-::callout{icon="i-heroicons-exclamation-triangle-20-solid" color="amber"}
- This section assumes you're familiar with [Nitro](https://v3.nuxtjs.org/guide/concepts/server-engine), the server engine powered by Nuxt.
+::callout{color="amber" icon="i-heroicons-exclamation-triangle-20-solid"}
+This section assumes you're familiar with [Nitro](https://v3.nuxtjs.org/guide/concepts/server-engine), the server engine powered by Nuxt.
 ::
 
 This function is similar to the [useSupabaseUser](/usage/composables/usesupabaseuser) composable but is used in [server routes](https://nuxt.com/docs/guide/directory-structure/server#server-routes).
