docs(icons): fix format

--- a/docs/content/2.get-started.md
+++ b/docs/content/2.get-started.md
@@ -1,6 +1,6 @@
 ---
 title: Get Started
-icon: heroicons:rocket-launch
+icon: i-heroicons-rocket-launch
 description: '@nuxtjs/supabase is a Nuxt module for first class integration with Supabase.'
 ---
 
