--- a/docs/content/3.authentication.md
+++ b/docs/content/3.authentication.md
@@ -1,6 +1,6 @@
 ---
 title: Authentication
-icon: heroicons:lock-closed
+icon: i-heroicons-lock-closed
 description: Authenticate your user thanks to the PKCE Oauth protocol that enables secure exchange of refresh and access tokens between an application and the authorization server
 ---
 
