--- a/docs/content/6.changelog.md
+++ b/docs/content/6.changelog.md
@@ -1,6 +1,6 @@
 ---
 title: Changelog
-icon: heroicons:bookmark
+icon: i-heroicons-bookmark
 description: Discover the latest updates of the Supabase Module
 ---
 
