--- a/docs/content/5.demo.md
+++ b/docs/content/5.demo.md
@@ -1,6 +1,6 @@
 ---
 title: Demo
-icon: heroicons:computer-desktop-20-solid
+icon: i-heroicons-computer-desktop-20-solid
 description: Demonstration of using Supabase with Nuxt.
 ---
 
