--- a/docs/content/7.roadmap.md
+++ b/docs/content/7.roadmap.md
@@ -1,7 +1,7 @@
 ---
 title: Roadmap
 description: Discover our kaban board for the next release of the Supabase module.
-icon: heroicons:map
+icon: i-heroicons-map
 ---
 
 ::volta-board
