docs(auth): var name

--- a/docs/content/3.authentication.md
+++ b/docs/content/3.authentication.md
@@ -90,7 +90,7 @@ You must enable the `cookieRedirect` option of the [redirectOptions](/get-starte
 const user = useSupabaseUser()
 
 // Get redirect path from cookies
-const config = useRuntimeConfig().public.supabase.cookieName
+const cookieName = useRuntimeConfig().public.supabase.cookieName
 const redirectPath = useCookie(`${cookieName}-redirect-path`).value
 
 watch(user, () => {
