feat(app): add `include` to `RedirectOptions`
Closes #268

--- a/docs/content/2.get-started.md
+++ b/docs/content/2.get-started.md
@@ -98,6 +98,7 @@ Default:
   redirectOptions: {
     login: '/login',
     callback: '/confirm',
+    include: undefined,
     exclude: [],
     cookieRedirect: false,
   }
@@ -105,6 +106,7 @@ Default:
 
 - `login`: User will be redirected to this path if not authenticated or after logout.
 - `callback`: This is the path the user will be redirect to after supabase login redirection. Should match configured `redirectTo` option of your [signIn method](https://supabase.com/docs/reference/javascript/auth-signinwithoauth). Should also be configured in your Supabase dashboard under `Authentication -> URL Configuration -> Redirect URLs`.
+- `include`: Routes to include in the redirect. `['/admin(/*)?']` will enable the redirect only for the `admin` page and all sub-pages.
 - `exclude`: Routes to exclude from the redirect. `['/foo', '/bar/*']` will exclude the `foo` page and all pages in your `bar` folder.
 - `cookieRedirect`: Sets a cookie containing the path an unauthenticated user tried to access. The cookie can then be used on the [`/confirm`](https://supabase.nuxtjs.org/authentication#confirm-page-confirm) page to redirect the user to the page they previously tried to visit.
 
