--- a/docs/content/3.authentication.md
+++ b/docs/content/3.authentication.md
@@ -14,7 +14,7 @@ For advanced users who want to implement the auth behaviour themselves, you can 
 
 ## Log-in page - `/login`
 
-Each time a user is trying to access a page that needs authentication, he will automatically be redirected to the configured log in page. If you want to allow access to "public" page, you just need to add them in the [exclude](/get-started#redirectoptions) redirect option.
+Each time a user is trying to access a page that needs authentication, he will automatically be redirected to the configured log in page. If you want to allow access to "public" page, you just need to add them in the [exclude](/get-started#redirectoptions) redirect option. Alternatively, you can enable the redirect only for certain routes using the [include](/get-started#redirectoptions) redirect option.
 
 ::callout{icon="i-heroicons-exclamation-triangle-20-solid" color="amber"}
 Ensure to activate the authentication providers you want in the Supabase Dashboard under `Authentication -> Providers`.
