docs(installation): use new `nuxi module add` command (#343)

--- a/docs/content/2.get-started.md
+++ b/docs/content/2.get-started.md
@@ -15,24 +15,9 @@ For integrating Supabase with Nuxt 2, checkout [supabase-community/nuxt-supabase
 ## Installation
 
 Add `@nuxtjs/supabase` dev dependency to your project:
-
-::code-group
-```bash [pnpm]
-pnpm add -D @nuxtjs/supabase
+```bash
+npx nuxi@latest module add supabase
 ```
-
-```bash [yarn]
-yarn add --dev @nuxtjs/supabase
-```
-
-```bash [NPM]
-npm install @nuxtjs/supabase --save-dev
-```
-
-```bash [bun]
-bun add -D @nuxtjs/supabase
-```
-::
 
 Add `@nuxtjs/supabase` to the `modules` section of `nuxt.config.ts`:
 
