refactor(composables): useSupabaseuser and useSupabaseSession async

--- a/docs/content/3.authentication.md
+++ b/docs/content/3.authentication.md
@@ -62,7 +62,7 @@ The redirect URL must be configured in your Supabase dashboard under `Authentica
 
 ```vue [pages/confirm.vue]
 <script setup lang="ts">
-const user = useSupabaseUser()
+const user = await useSupabaseUser()
 
 watch(user, () => {
   if (user.value) {
@@ -87,7 +87,7 @@ You must enable the `cookieRedirect` option of the [redirectOptions](/get-starte
 
 ```vue [pages/confirm.vue]
 <script setup lang="ts">
-const user = useSupabaseUser()
+const user = await useSupabaseUser()
 
 // Get redirect path from cookies
 const cookieName = useRuntimeConfig().public.supabase.cookieName
