feat: automatically pass database typings to clients

--- a/docs/content/2.get-started.md
+++ b/docs/content/2.get-started.md
@@ -113,6 +113,24 @@ Cookie name used for storing access and refresh tokens, added in front of `-acce
 
 Options for cookies used to share tokens between server and client, refer to [cookieOptions](https://nuxt.com/docs/api/composables/use-cookie#options) for available settings. Please note that the lifetime set here does not determine the Supabase session lifetime.
 
+### `types`
+
+Default: `./types/database.types.ts`
+
+The path for the generated Supabase TypeScript definitions. The database definitions will be automatically passed to all clients: `useSupabaseClient`, `serverSupabaseClient` and `serverSupabaseServiceRole`.
+
+```shell
+## Generate types from live database
+supabase gen types typescript --project-id YourProjectId > types/database.types.ts
+
+## Generate types when using local environment
+supabase gen types typescript --local > types/database.types.ts
+```
+
+Set to `false` to disable.
+
+Check Supabase [documentation](https://supabase.com/docs/reference/javascript/release-notes#typescript-support) for further information.
+
 ### `clientOptions`
 
 Default:
