docs(get-started): update from Nuxt Studio

--- a/docs/content/2.get-started.md
+++ b/docs/content/2.get-started.md
@@ -8,13 +8,14 @@ description: '@nuxtjs/supabase is a Nuxt module for first class integration with
 
 Checkout the [Nuxt 3](https://v3.nuxtjs.org) documentation and [Supabase](https://supabase.com) to learn more.
 
-::callout{icon="i-heroicons-exclamation-triangle-20-solid" color="amber"}
+::callout{color="amber" icon="i-heroicons-exclamation-triangle-20-solid"}
 For integrating Supabase with Nuxt 2, checkout [supabase-community/nuxt-supabase](https://github.com/supabase-community/nuxt-supabase).
 ::
 
 ## Installation
 
 Add `@nuxtjs/supabase` dev dependency to your project:
+
 ```bash
 npx nuxi@latest module add supabase
 ```
@@ -101,7 +102,7 @@ Default: `sb`
 
 Cookie name used for storing the redirect path when using the `redirect` option, added in front of `-redirect-path` to form the full cookie name e.g. `sb-redirect-path`
 
-### cookieOptions
+### `cookieOptions`
 
 ```ts
   cookieOptions: {
@@ -119,7 +120,7 @@ Default: `./types/database.types.ts`
 
 The path for the generated Supabase TypeScript definitions. The database definitions will be automatically passed to all clients: `useSupabaseClient`, `serverSupabaseClient` and `serverSupabaseServiceRole`.
 
-```shell
+```bash
 ## Generate types from live database
 supabase gen types typescript --project-id YourProjectId > types/database.types.ts
 
@@ -133,7 +134,7 @@ Check Supabase [documentation](https://supabase.com/docs/reference/javascript/re
 
 ### `clientOptions`
 
-Default: 
+Default:
 
 ```ts
   clientOptions: { }
@@ -146,20 +147,11 @@ Supabase client options [available here](https://supabase.com/docs/reference/jav
     auth: {
       flowType: 'pkce',
       autoRefreshToken: isBrowser(),
-			detectSessionInUrl: isBrowser(),
-			persistSession: true,
+            detectSessionInUrl: isBrowser(),
+            persistSession: true,
     },
   }
 ```
-
-
-## Versions
-
-`0.1.x` versions are wrapped around `supabase-js v1`.
-
-:br
-
-`1.x.x` versions are wrapped around `supabase-js v2`.
 
 ## Demo
 
