--- a/docs/content/4.usage/services/2.serverSupabaseServiceRole.md
+++ b/docs/content/4.usage/services/2.serverSupabaseServiceRole.md
@@ -1,5 +1,5 @@
 ---
-title: serverServiceRole
+title: serverSupabaseServiceRole
 description: Make requests with super admin rights to the Supabase API with the serverSupabaseServiceRole service
 navigation:
   title: serverSupabaseServiceRole
