--- a/docs/content/2.get-started.md
+++ b/docs/content/2.get-started.md
@@ -70,6 +70,22 @@ Default: `process.env.SUPABASE_SERVICE_KEY`
 
 Supabase 'service role key', has super admin rights and can bypass your Row Level Security.
 
+### `useSsrCookies`
+
+Default: `true`
+
+Controls whether the module uses cookies to share session info between server and client. You *must* enable this option if you need to access session or user info from the server.
+
+When disabled, the module will use the default Supabase client which stores session info in local storage. This is useful in certain cases, such as statically generated sites or mobile apps where cookies might not be available.
+
+::callout{icon="i-heroicons-exclamation-triangle-20-solid"}
+When `useSsrCookies` is `true` the following options cannot be customized with `clientOptions`:
+
+- `flowType`, `autoRefreshToken`, `detectSessionInUrl`, `persistSession`, `storage`
+
+If you need to customize one of the above options, you must set `useSsrCookies` to `false`. Bear in mind that this will disable SSR support.
+::
+
 ### `redirect`
 
 Default: `true`
@@ -140,7 +156,9 @@ Default:
   clientOptions: { }
 ```
 
-Supabase client options [available here](https://supabase.com/docs/reference/javascript/initializing#parameters) merged with default values from `@supabase/ssr`:
+Customize the Supabase client options [available here](https://supabase.com/docs/reference/javascript/initializing#parameters).
+
+If `useSsrCookies` is enabled, these options will be merged with values from `@supabase/ssr`, and some of the [options cannot be customized](/get-started#usessrcookies).
 
 ```ts
   clientOptions: {
