Add cookie prefix option.
This allows you to change the default cookie name that supabase stores cookies under.

--- a/docs/content/2.get-started.md
+++ b/docs/content/2.get-started.md
@@ -112,11 +112,17 @@ Default:
 - `exclude`: Routes to exclude from the redirect. `['/foo', '/bar/**']` will exclude the `foo` page and all pages in your `bar` folder.
 - `cookieRedirect`: Sets a cookie containing the path an unauthenticated user tried to access. The cookie can then be used on the [`/confirm`](https://supabase.nuxtjs.org/authentication#confirm-page-confirm) page to redirect the user to the page they previously tried to visit.
 
-### `cookieName`
+### `cookiePrefix`
 
-Default: `sb`
+Default: `sb-{your-project-id}-auth-token`
 
-Cookie name used for storing the redirect path when using the `redirect` option, added in front of `-redirect-path` to form the full cookie name e.g. `sb-redirect-path`
+The prefix used for all supabase cookies, and the redirect cookie.
+
+By default, the cookie prefix is the same as the default storage key from the supabase-js client. This includes your project id, and will look something like this: `sb-ttc1xwfwkoleowdqayb19-auth-token`
+
+::callout{icon="i-heroicons-light-bulb"}
+If the `useSsrCookies` option is set to `false`, this option will not affect supabase, and only apply to the `useSupabaseCookieRedirect` cookie.
+::
 
 ### `cookieOptions`
 
