Added useSupabaseCookieRedirect, and improve redirect option behavior.

--- a/docs/content/2.get-started.md
+++ b/docs/content/2.get-started.md
@@ -102,7 +102,7 @@ Default:
     callback: '/confirm',
     include: undefined,
     exclude: [],
-    cookieRedirect: false,
+    saveRedirectToCookie: false,
   }
 ```
 
@@ -110,7 +110,7 @@ Default:
 - `callback`: This is the path the user will be redirect to after supabase login redirection. Should match configured `redirectTo` option of your [signIn method](https://supabase.com/docs/reference/javascript/auth-signinwithoauth). Should also be configured in your Supabase dashboard under `Authentication -> URL Configuration -> Redirect URLs`.
 - `include`: Routes to include in the redirect. `['/admin(/*)?']` will enable the redirect only for the `admin` page and all sub-pages.
 - `exclude`: Routes to exclude from the redirect. `['/foo', '/bar/**']` will exclude the `foo` page and all pages in your `bar` folder.
-- `cookieRedirect`: Sets a cookie containing the path an unauthenticated user tried to access. The cookie can then be used on the [`/confirm`](https://supabase.nuxtjs.org/authentication#confirm-page-confirm) page to redirect the user to the page they previously tried to visit.
+- `saveRedirectToCookie`: Automatically sets a cookie containing the path an unauthenticated user tried to access. The value can be accessed using the [`useSupabaseCookieRedirect`](/usage/composables/useSupabaseCookieRedirect) composable to redirect the user to the page they previously tried to visit. 
 
 ### `cookiePrefix`
 
@@ -176,6 +176,26 @@ If `useSsrCookies` is enabled, these options will be merged with values from `@s
     },
   }
 ```
+
+### `cookieName`
+
+::callout{color="amber" icon="i-heroicons-exclamation-triangle-20-solid"}
+This option is deprecated, use [`cookiePrefix`](/get-started#cookieprefix) instead.
+::
+
+Default: `sb`
+
+Cookie name used for storing the redirect path when using the `redirectOptions.cookieRedirect` option, added in front of `-redirect-path` to form the full cookie name e.g. `sb-redirect-path`
+
+### `redirectOptions.cookieRedirect`
+
+::callout{color="amber" icon="i-heroicons-exclamation-triangle-20-solid"}
+This option is deprecated, use [`redirectOptions.saveRedirectToCookie`](/get-started#redirectoptions) instead.
+::
+
+Default: `false`
+
+Use the `cookieRedirect` option to store the redirect path in a cookie.
 
 ## Demo
 
