--- a/docs/content/3.authentication.md
+++ b/docs/content/3.authentication.md
@@ -54,7 +54,7 @@ Once the authorization flow is triggered using the `auth` wrapper of the [useSup
 
 ## Confirm page - `/confirm`
 
-The confirmation page receives the supabase callback. From there you can check the user value and redirect to the appropriate page.
+The confirmation page receives the supabase callback which contains session information. The supabase client automatically detects and handles this, and once the session is confirmed the user value will automatically be updated. From there you can redirect to the appropriate page.
 
 ::callout{icon="i-heroicons-light-bulb"}
 The redirect URL must be configured in your Supabase dashboard under `Authentication -> URL Configuration -> Redirect URLs`.
@@ -79,30 +79,30 @@ watch(user, () => {
 
 ### Redirect path
 
-You can easily handle redirection to the initial requested route after login.
+You can easily handle redirection to the initial requested route after login using the [`useSupabaseCookieRedirect`](/usage/composables/usesupabasecookieredirect) composable and the [`saveRedirectToCookie`](/get-started#redirectoptions) option.
 
-::callout{icon="i-heroicons-light-bulb"}
-You must enable the `cookieRedirect` option of the [redirectOptions](/get-started#redirectoptions) to allow cookie storage and take benefit of this feature.
-::
+By setting the `saveRedirectToCookie` option to `true`, the module will automatically save the current path to a cookie when the user is redirected to the login page. When the user logs in, you can then retrieve the saved path from the cookie and redirect the user to it on the [`/confirm`](/authentication#confirm-page-confirm) page:
 
 ```vue [pages/confirm.vue]
 <script setup lang="ts">
 const user = useSupabaseUser()
-
-// Get redirect path from cookies
-const cookieName = useRuntimeConfig().public.supabase.cookieName
-const redirectPath = useCookie(`${cookieName}-redirect-path`).value
+const redirectInfo = useSupabaseCookieRedirect()
 
 watch(user, () => {
   if (user.value) {
-      // Clear cookie
-      useCookie(`${cookieName}-redirect-path`).value = null
-      // Redirect to path
-      return navigateTo(redirectPath || '/'); 
+    // Get redirect path, and clear it from the cookie
+    const path = redirectInfo.pluck()
+    // Redirect to the saved path, or fallback to home
+    return navigateTo(path || '/') 
   }
 }, { immediate: true })
 </script>
+
 <template>
   <div>Waiting for login...</div>
 </template>
 ```
+
+::callout{icon="i-heroicons-light-bulb"}
+If you want to manually set the redirect path, you can do so by disabling [`saveRedirectToCookie`](/get-started#redirectoptions), and then set the value using the  [`useSupabaseCookieRedirect`](/usage/composables/usesupabasecookieredirect) composable directly.
+::
