--- a/docs/content/2.get-started.md
+++ b/docs/content/2.get-started.md
@@ -74,16 +74,16 @@ Supabase 'service role key', has super admin rights and can bypass your Row Leve
 
 Default: `true`
 
-Controls whether the module uses cookies to share session info between server and client. You *must* enable this option if you need to access session or user info from the server.
+Controls whether the module uses cookies to share session info between server and client. You *must* enable this option if you need to access session or user info from the server. It will use the SSR client from the [@supabase/ssr](https://github.com/supabase/ssr) library.
 
-When disabled, the module will use the default Supabase client which stores session info in local storage. This is useful in certain cases, such as statically generated sites or mobile apps where cookies might not be available.
+When disabled, the module will use the default Supabase client from  the [@supabase/supabase-js](https://github.com/supabase/supabase-js) library which stores session info in local storage. This is useful in certain cases, such as statically generated sites or mobile apps where cookies might not be available.
 
 ::callout{icon="i-heroicons-exclamation-triangle-20-solid"}
 When `useSsrCookies` is `true` the following options cannot be customized with `clientOptions`:
 
 - `flowType`, `autoRefreshToken`, `detectSessionInUrl`, `persistSession`, `storage`
 
-If you need to customize one of the above options, you must set `useSsrCookies` to `false`. Bear in mind that this will disable SSR support.
+If you need to customize one of the above options, you must set `useSsrCookies` to `false`. Bear in mind that this will disable SSR support, you'll need to take care of it yourself if needed. 
 ::
 
 ### `redirect`
