--- a/docs/content/2.get-started.md
+++ b/docs/content/2.get-started.md
@@ -70,6 +70,22 @@ Default: `process.env.SUPABASE_SERVICE_KEY`
 
 Supabase 'service role key', has super admin rights and can bypass your Row Level Security.
 
+### `useSsrCookies`
+
+Default: `true`
+
+Controls whether the module uses cookies to share session info between server and client. You *must* enable this option if you need to access session or user info from the server. It will use the SSR client from the [@supabase/ssr](https://github.com/supabase/ssr) library.
+
+When disabled, the module will use the default Supabase client from  the [@supabase/supabase-js](https://github.com/supabase/supabase-js) library which stores session info in local storage. This is useful in certain cases, such as statically generated sites or mobile apps where cookies might not be available.
+
+::callout{icon="i-heroicons-exclamation-triangle-20-solid"}
+When `useSsrCookies` is `true` the following options cannot be customized with `clientOptions`:
+
+- `flowType`, `autoRefreshToken`, `detectSessionInUrl`, `persistSession`, `storage`
+
+If you need to customize one of the above options, you must set `useSsrCookies` to `false`. Bear in mind that this will disable SSR support, you'll need to take care of it yourself if needed. 
+::
+
 ### `redirect`
 
 Default: `true`
@@ -86,7 +102,7 @@ Default:
     callback: '/confirm',
     include: undefined,
     exclude: [],
-    cookieRedirect: false,
+    saveRedirectToCookie: false,
   }
 ```
 
@@ -94,13 +110,19 @@ Default:
 - `callback`: This is the path the user will be redirect to after supabase login redirection. Should match configured `redirectTo` option of your [signIn method](https://supabase.com/docs/reference/javascript/auth-signinwithoauth). Should also be configured in your Supabase dashboard under `Authentication -> URL Configuration -> Redirect URLs`.
 - `include`: Routes to include in the redirect. `['/admin(/*)?']` will enable the redirect only for the `admin` page and all sub-pages.
 - `exclude`: Routes to exclude from the redirect. `['/foo', '/bar/**']` will exclude the `foo` page and all pages in your `bar` folder.
-- `cookieRedirect`: Sets a cookie containing the path an unauthenticated user tried to access. The cookie can then be used on the [`/confirm`](https://supabase.nuxtjs.org/authentication#confirm-page-confirm) page to redirect the user to the page they previously tried to visit.
+- `saveRedirectToCookie`: Automatically sets a cookie containing the path an unauthenticated user tried to access. The value can be accessed using the [`useSupabaseCookieRedirect`](/usage/composables/useSupabaseCookieRedirect) composable to redirect the user to the page they previously tried to visit. 
 
-### `cookieName`
+### `cookiePrefix`
 
-Default: `sb`
+Default: `sb-{your-project-id}-auth-token`
 
-Cookie name used for storing the redirect path when using the `redirect` option, added in front of `-redirect-path` to form the full cookie name e.g. `sb-redirect-path`
+The prefix used for all supabase cookies, and the redirect cookie.
+
+By default, the cookie prefix is the same as the default storage key from the supabase-js client. This includes your project id, and will look something like this: `sb-ttc1xwfwkoleowdqayb19-auth-token`
+
+::callout{icon="i-heroicons-light-bulb"}
+If the `useSsrCookies` option is set to `false`, this option will not affect supabase, and only apply to the `useSupabaseCookieRedirect` cookie.
+::
 
 ### `cookieOptions`
 
@@ -140,7 +162,9 @@ Default:
   clientOptions: { }
 ```
 
-Supabase client options [available here](https://supabase.com/docs/reference/javascript/initializing#parameters) merged with default values from `@supabase/ssr`:
+Customize the Supabase client options [available here](https://supabase.com/docs/reference/javascript/initializing#parameters).
+
+If `useSsrCookies` is enabled, these options will be merged with values from `@supabase/ssr`, and some of the [options cannot be customized](/get-started#usessrcookies).
 
 ```ts
   clientOptions: {
@@ -152,6 +176,26 @@ Supabase client options [available here](https://supabase.com/docs/reference/jav
     },
   }
 ```
+
+### `cookieName`
+
+::callout{color="amber" icon="i-heroicons-exclamation-triangle-20-solid"}
+This option is deprecated, use [`cookiePrefix`](/get-started#cookieprefix) instead.
+::
+
+Default: `sb`
+
+Cookie name used for storing the redirect path when using the `redirectOptions.cookieRedirect` option, added in front of `-redirect-path` to form the full cookie name e.g. `sb-redirect-path`
+
+### `redirectOptions.cookieRedirect`
+
+::callout{color="amber" icon="i-heroicons-exclamation-triangle-20-solid"}
+This option is deprecated, use [`redirectOptions.saveRedirectToCookie`](/get-started#redirectoptions) instead.
+::
+
+Default: `false`
+
+Use the `cookieRedirect` option to store the redirect path in a cookie.
 
 ## Demo
 
