--- a/docs/content/2.get-started.md
+++ b/docs/content/2.get-started.md
@@ -199,7 +199,7 @@ Use the `cookieRedirect` option to store the redirect path in a cookie.
 
 ## Demo
 
-A live demo is made for see this module in action on [n3-supabase.netlify.app](https://n3-supabase.netlify.app), read more in the [demo section](/demo).
+A live demo is made for you to see this module in action on [n3-supabase.netlify.app](https://n3-supabase.netlify.app), read more in the [demo section](/demo).
 
 [![Supabase demo with Nuxt 3](https://user-images.githubusercontent.com/904724/160422461-8f87500a-8dec-4413-86b2-ba04e1b2d17b.png)](https://n3-supabase.netlify.app)
 
