docs: use ui pro v3 components

--- a/docus/content/3.authentication.md
+++ b/docus/content/3.authentication.md
@@ -1,6 +1,6 @@
 ---
 title: Authentication
-navigation.icon: i-heroicons-lock-closed
+navigation.icon: i-lucide-lock
 description: Authenticate your user thanks to the PKCE Oauth protocol that enables secure exchange of refresh and access tokens between an application and the authorization server
 ---
 
@@ -8,7 +8,7 @@ With the default options, the module requires a log-in page and a confirm page t
 
 All you need to do is to create a `login.vue` and `confirm.vue` page in the `pages` folder.
 
-::callout{icon="i-heroicons-light-bulb"}
+::tip
 For advanced users who want to implement the auth behaviour themselves, you can disable or override the [redirect options](/get-started#redirect).
 ::
 
@@ -16,7 +16,7 @@ For advanced users who want to implement the auth behaviour themselves, you can 
 
 Each time a user is trying to access a page that needs authentication, he will automatically be redirected to the configured log in page. If you want to allow access to "public" page, you just need to add them in the [exclude](/get-started#redirectoptions) redirect option. Alternatively, you can enable the redirect only for certain routes using the [include](/get-started#redirectoptions) redirect option.
 
-::callout{icon="i-heroicons-exclamation-triangle-20-solid" color="amber"}
+::warning
 Ensure to activate the authentication providers you want in the Supabase Dashboard under `Authentication -> Providers`.
 ::
 
@@ -56,7 +56,7 @@ Once the authorization flow is triggered using the `auth` wrapper of the [useSup
 
 The confirmation page receives the supabase callback which contains session information. The supabase client automatically detects and handles this, and once the session is confirmed the user value will automatically be updated. From there you can redirect to the appropriate page.
 
-::callout{icon="i-heroicons-light-bulb"}
+::tip
 The redirect URL must be configured in your Supabase dashboard under `Authentication -> URL Configuration -> Redirect URLs`.
 ::
 
@@ -103,6 +103,6 @@ watch(user, () => {
 </template>
 ```
 
-::callout{icon="i-heroicons-light-bulb"}
+::tip
 If you want to manually set the redirect path, you can do so by disabling [`saveRedirectToCookie`](/get-started#redirectoptions), and then set the value using the  [`useSupabaseCookieRedirect`](/usage/composables/usesupabasecookieredirect) composable directly.
 ::
