--- a/docus/content/4.usage/services/4.serverSupabaseUser.md
+++ b/docus/content/4.usage/services/4.serverSupabaseUser.md
@@ -3,7 +3,7 @@ title: serverSupabaseUser
 description: Get your Supabase user from serverside with the serverSupabaseUser service
 ---
 
-::callout{color="amber" icon="i-heroicons-exclamation-triangle-20-solid"}
+::warning
 This section assumes you're familiar with [Nitro](https://v3.nuxtjs.org/guide/concepts/server-engine), the server engine powered by Nuxt.
 ::
 
