--- a/docus/content/5.demo.md
+++ b/docus/content/5.demo.md
@@ -1,6 +1,6 @@
 ---
 title: Demo
-navigation.icon: i-heroicons-computer-desktop-20-solid
+navigation.icon: i-lucide-monitor
 description: Demonstration of using Supabase with Nuxt.
 ---
 
