--- a/docus/content/2.get-started.md
+++ b/docus/content/2.get-started.md
@@ -1,6 +1,6 @@
 ---
 title: Get Started
-navigation.icon: i-heroicons-rocket-launch
+navigation.icon: i-lucide-rocket
 description: '@nuxtjs/supabase is a Nuxt module for first class integration with Supabase.'
 ---
 
@@ -8,7 +8,7 @@ description: '@nuxtjs/supabase is a Nuxt module for first class integration with
 
 Checkout the [Nuxt 3](https://v3.nuxtjs.org) documentation and [Supabase](https://supabase.com) to learn more.
 
-::callout{color="amber" icon="i-heroicons-exclamation-triangle-20-solid"}
+::warning
 For integrating Supabase with Nuxt 2, checkout [supabase-community/nuxt-supabase](https://github.com/supabase-community/nuxt-supabase).
 ::
 
@@ -35,7 +35,7 @@ SUPABASE_URL="https://example.supabase.co"
 SUPABASE_KEY="<your_key>"
 ```
 
-::callout{icon="i-heroicons-light-bulb"}
+::tip
 Alternatively, you can prefix the env variables with `NUXT_PUBLIC_` in order to use runtimeConfig.
 ::
 
@@ -78,7 +78,7 @@ Controls whether the module uses cookies to share session info between server an
 
 When disabled, the module will use the default Supabase client from  the [@supabase/supabase-js](https://github.com/supabase/supabase-js) library which stores session info in local storage. This is useful in certain cases, such as statically generated sites or mobile apps where cookies might not be available.
 
-::callout{icon="i-heroicons-exclamation-triangle-20-solid"}
+::warning
 When `useSsrCookies` is `true` the following options cannot be customized with `clientOptions`:
 
 - `flowType`, `autoRefreshToken`, `detectSessionInUrl`, `persistSession`, `storage`
@@ -120,7 +120,7 @@ The prefix used for all supabase cookies, and the redirect cookie.
 
 By default, the cookie prefix is the same as the default storage key from the supabase-js client. This includes your project id, and will look something like this: `sb-ttc1xwfwkoleowdqayb19-auth-token`
 
-::callout{icon="i-heroicons-light-bulb"}
+::tip
 If the `useSsrCookies` option is set to `false`, this option will not affect supabase, and only apply to the `useSupabaseCookieRedirect` cookie.
 ::
 
@@ -179,7 +179,7 @@ If `useSsrCookies` is enabled, these options will be merged with values from `@s
 
 ### `cookieName`
 
-::callout{color="amber" icon="i-heroicons-exclamation-triangle-20-solid"}
+::warning
 This option is deprecated, use [`cookiePrefix`](/get-started#cookieprefix) instead.
 ::
 
@@ -189,7 +189,7 @@ Cookie name used for storing the redirect path when using the `redirectOptions.c
 
 ### `redirectOptions.cookieRedirect`
 
-::callout{color="amber" icon="i-heroicons-exclamation-triangle-20-solid"}
+::warning
 This option is deprecated, use [`redirectOptions.saveRedirectToCookie`](/get-started#redirectoptions) instead.
 ::
 
