--- a/docus/content/4.usage/services/2.serverSupabaseServiceRole.md
+++ b/docus/content/4.usage/services/2.serverSupabaseServiceRole.md
@@ -5,7 +5,7 @@ navigation:
   title: serverSupabaseServiceRole
 ---
 
-::callout{color="amber" icon="i-heroicons-exclamation-triangle-20-solid"}
+::warning
 This section assumes you're familiar with [Nitro](https://v3.nuxtjs.org/guide/concepts/server-engine), the server engine powered by Nuxt.
 ::
 
