--- a/docus/content/4.usage/services/3.serverSupabaseSession.md
+++ b/docus/content/4.usage/services/3.serverSupabaseSession.md
@@ -3,13 +3,13 @@ title: serverSupabaseSession
 description: Get your Supabase user's session from serverside with the serverSupabaseUser service
 ---
 
-::callout{color="amber" icon="i-heroicons-exclamation-triangle-20-solid"}
+::warning
 This section assumes you're familiar with [Nitro](https://v3.nuxtjs.org/guide/concepts/server-engine), the server engine powered by Nuxt.
 ::
 
 This function is similar to the [useSupabaseSession](/usage/composables/usesupabasesession) composable but is used in [server routes](https://nuxt.com/docs/guide/directory-structure/server#server-routes).
 
-::callout{color="amber" icon="i-heroicons-exclamation-triangle-20-solid"}
+::warning
 Be advised that `serverSupabaseSession` is considered unsafe, since the session comes from the client and users can tamper with it. For checking if the user is logged in, always use  [serverSupabaseUser](/usage/services/serversupabaseuser)
 ::
 
