docs: update architecture

--- a/docus/content/1.getting-started/1.introduction.md
+++ b/docus/content/1.getting-started/1.introduction.md
@@ -1,6 +1,5 @@
 ---
-title: Get Started
-navigation.icon: i-lucide-rocket
+title: Introduction
 description: '@nuxtjs/supabase is a Nuxt module for first class integration with Supabase.'
 ---
 
