docs: fix links

--- a/docus/content/1.getting-started/1.introduction.md
+++ b/docus/content/1.getting-started/1.introduction.md
@@ -109,7 +109,7 @@ Default:
 - `callback`: This is the path the user will be redirect to after supabase login redirection. Should match configured `redirectTo` option of your [signIn method](https://supabase.com/docs/reference/javascript/auth-signinwithoauth). Should also be configured in your Supabase dashboard under `Authentication -> URL Configuration -> Redirect URLs`.
 - `include`: Routes to include in the redirect. `['/admin(/*)?']` will enable the redirect only for the `admin` page and all sub-pages.
 - `exclude`: Routes to exclude from the redirect. `['/foo', '/bar/**']` will exclude the `foo` page and all pages in your `bar` folder.
-- `saveRedirectToCookie`: Automatically sets a cookie containing the path an unauthenticated user tried to access. The value can be accessed using the [`useSupabaseCookieRedirect`](/usage/composables/usesupabasecookieredirect) composable to redirect the user to the page they previously tried to visit. 
+- `saveRedirectToCookie`: Automatically sets a cookie containing the path an unauthenticated user tried to access. The value can be accessed using the [`useSupabaseCookieRedirect`](/composables/usesupabasecookieredirect) composable to redirect the user to the page they previously tried to visit. 
 
 ### `cookiePrefix`
 
@@ -163,7 +163,7 @@ Default:
 
 Customize the Supabase client options [available here](https://supabase.com/docs/reference/javascript/initializing#parameters).
 
-If `useSsrCookies` is enabled, these options will be merged with values from `@supabase/ssr`, and some of the [options cannot be customized](/get-started#usessrcookies).
+If `useSsrCookies` is enabled, these options will be merged with values from `@supabase/ssr`, and some of the [options cannot be customized](/getting-started/introduction#usessrcookies).
 
 ```ts
   clientOptions: {
@@ -179,7 +179,7 @@ If `useSsrCookies` is enabled, these options will be merged with values from `@s
 ### `cookieName`
 
 ::warning
-This option is deprecated, use [`cookiePrefix`](/get-started#cookieprefix) instead.
+This option is deprecated, use [`cookiePrefix`](/getting-started/introduction#cookieprefix) instead.
 ::
 
 Default: `sb`
@@ -189,7 +189,7 @@ Cookie name used for storing the redirect path when using the `redirectOptions.c
 ### `redirectOptions.cookieRedirect`
 
 ::warning
-This option is deprecated, use [`redirectOptions.saveRedirectToCookie`](/get-started#redirectoptions) instead.
+This option is deprecated, use [`redirectOptions.saveRedirectToCookie`](/getting-started/introduction#redirectoptions) instead.
 ::
 
 Default: `false`
@@ -198,7 +198,7 @@ Use the `cookieRedirect` option to store the redirect path in a cookie.
 
 ## Demo
 
-A live demo is made for you to see this module in action on [n3-supabase.netlify.app](https://n3-supabase.netlify.app), read more in the [demo section](/demo).
+A live demo is made for you to see this module in action on [n3-supabase.netlify.app](https://n3-supabase.netlify.app), read more in the [demo section](/getting-started/demo).
 
 [![Supabase demo with Nuxt 3](https://user-images.githubusercontent.com/904724/160422461-8f87500a-8dec-4413-86b2-ba04e1b2d17b.png)](https://n3-supabase.netlify.app)
 
