--- a/docus/content/1.getting-started/2.authentication.md
+++ b/docus/content/1.getting-started/2.authentication.md
@@ -8,12 +8,12 @@ With the default options, the module requires a log-in page and a confirm page t
 All you need to do is to create a `login.vue` and `confirm.vue` page in the `pages` folder.
 
 ::tip
-For advanced users who want to implement the auth behaviour themselves, you can disable or override the [redirect options](/get-started#redirect).
+For advanced users who want to implement the auth behaviour themselves, you can disable or override the [redirect options](/getting-started/introduction#redirect).
 ::
 
 ## Log-in page - `/login`
 
-Each time a user is trying to access a page that needs authentication, he will automatically be redirected to the configured log in page. If you want to allow access to "public" page, you just need to add them in the [exclude](/get-started#redirectoptions) redirect option. Alternatively, you can enable the redirect only for certain routes using the [include](/get-started#redirectoptions) redirect option.
+Each time a user is trying to access a page that needs authentication, he will automatically be redirected to the configured log in page. If you want to allow access to "public" page, you just need to add them in the [exclude](/getting-started/introduction#redirectoptions) redirect option. Alternatively, you can enable the redirect only for certain routes using the [include](/getting-started/introduction#redirectoptions) redirect option.
 
 ::warning
 Ensure to activate the authentication providers you want in the Supabase Dashboard under `Authentication -> Providers`.
@@ -49,7 +49,7 @@ const signInWithOtp = async () => {
 </template>
 ```
 
-Once the authorization flow is triggered using the `auth` wrapper of the [useSupabaseClient](/usage/composables/usesupabaseclient) composable, the session management is handled automatically and the user will be redirected to the page you specify in the redirect option (`/confirm` by default).
+Once the authorization flow is triggered using the `auth` wrapper of the [useSupabaseClient](/composables/usesupabaseclient) composable, the session management is handled automatically and the user will be redirected to the page you specify in the redirect option (`/confirm` by default).
 
 ## Confirm page - `/confirm`
 
@@ -78,9 +78,9 @@ watch(user, () => {
 
 ### Redirect path
 
-You can easily handle redirection to the initial requested route after login using the [`useSupabaseCookieRedirect`](/usage/composables/usesupabasecookieredirect) composable and the [`saveRedirectToCookie`](/get-started#redirectoptions) option.
+You can easily handle redirection to the initial requested route after login using the [`useSupabaseCookieRedirect`](/composables/usesupabasecookieredirect) composable and the [`saveRedirectToCookie`](/getting-started/introduction#redirectoptions) option.
 
-By setting the `saveRedirectToCookie` option to `true`, the module will automatically save the current path to a cookie when the user is redirected to the login page. When the user logs in, you can then retrieve the saved path from the cookie and redirect the user to it on the [`/confirm`](/authentication#confirm-page-confirm) page:
+By setting the `saveRedirectToCookie` option to `true`, the module will automatically save the current path to a cookie when the user is redirected to the login page. When the user logs in, you can then retrieve the saved path from the cookie and redirect the user to it on the [`/confirm`](/getting-started/authentication#confirm-page-confirm) page:
 
 ```vue [pages/confirm.vue]
 <script setup lang="ts">
@@ -103,5 +103,5 @@ watch(user, () => {
 ```
 
 ::tip
-If you want to manually set the redirect path, you can do so by disabling [`saveRedirectToCookie`](/get-started#redirectoptions), and then set the value using the  [`useSupabaseCookieRedirect`](/usage/composables/usesupabasecookieredirect) composable directly.
+If you want to manually set the redirect path, you can do so by disabling [`saveRedirectToCookie`](/getting-started/introduction#redirectoptions), and then set the value using the  [`useSupabaseCookieRedirect`](/composables/usesupabasecookieredirect) composable directly.
 ::
