docs(demo): update

--- a/docs/content/1.getting-started/3.demo.md
+++ b/docs/content/1.getting-started/3.demo.md
@@ -5,11 +5,11 @@ description: Demonstration of using Supabase with Nuxt.
 
 Demonstration of using Supabase with Nuxt.
 
-[![Supabase demo with Nuxt 3](https://user-images.githubusercontent.com/904724/160422461-8f87500a-8dec-4413-86b2-ba04e1b2d17b.png)](https://n3-supabase.netlify.app)
+[![Supabase demo with Nuxt 3](/demo.png)](https://supabase-demo-gamma.vercel.app)
 
 ## Live demo
 
-You can play with the demo on [n3-supabase.netlify.app](https://n3-supabase.netlify.app)
+You can play with the demo on [https://supabase-demo-gamma.vercel.app](https://supabase-demo-gamma.vercel.app)
 
 ## Running locally
 
