--- a/docs/content/1.getting-started/1.introduction.md
+++ b/docs/content/1.getting-started/1.introduction.md
@@ -198,8 +198,8 @@ Use the `cookieRedirect` option to store the redirect path in a cookie.
 
 ## Demo
 
-A live demo is made for you to see this module in action on [n3-supabase.netlify.app](https://n3-supabase.netlify.app), read more in the [demo section](/getting-started/demo).
+A live demo is made for you to see this module in action on [https://supabase-demo-gamma.vercel.app](https://supabase-demo-gamma.vercel.app), read more in the [demo section](/getting-started/demo).
 
-[![Supabase demo with Nuxt 3](https://user-images.githubusercontent.com/904724/160422461-8f87500a-8dec-4413-86b2-ba04e1b2d17b.png)](https://n3-supabase.netlify.app)
+[![Supabase demo with Nuxt 3](/demo.png)](https://supabase-demo-gamma.vercel.app)
 
 Also checkout the [YouTube video](https://www.youtube.com/watch?v=jIyiRT6zT8Q) about its usage in a live demo.
