docs: apply studio formatting

--- a/docs/content/1.getting-started/2.authentication.md
+++ b/docs/content/1.getting-started/2.authentication.md
@@ -1,6 +1,8 @@
 ---
 title: Authentication
-description: Authenticate your user thanks to the PKCE Oauth protocol that enables secure exchange of refresh and access tokens between an application and the authorization server
+description: Authenticate your user thanks to the PKCE Oauth protocol that
+  enables secure exchange of refresh and access tokens between an application
+  and the authorization server
 ---
 
 With the default options, the module requires a log-in page and a confirm page to handle the [PKCE authorization code flow](https://supabase.com/docs/guides/resources/glossary#pkce). If you want to understand how it works under the hood, you can read this [section](https://supabase.com/docs/guides/auth/server-side-rendering#understanding-the-authentication-flow).
@@ -103,5 +105,5 @@ watch(user, () => {
 ```
 
 ::tip
-If you want to manually set the redirect path, you can do so by disabling [`saveRedirectToCookie`](/getting-started/introduction#redirectoptions), and then set the value using the  [`useSupabaseCookieRedirect`](/composables/usesupabasecookieredirect) composable directly.
+If you want to manually set the redirect path, you can do so by disabling [`saveRedirectToCookie`](/getting-started/introduction#redirectoptions), and then set the value using the [`useSupabaseCookieRedirect`](/composables/usesupabasecookieredirect) composable directly.
 ::
