--- a/docs/content/1.getting-started/3.demo.md
+++ b/docs/content/1.getting-started/3.demo.md
@@ -5,11 +5,11 @@ description: Demonstration of using Supabase with Nuxt.
 
 Demonstration of using Supabase with Nuxt.
 
-[![Supabase demo with Nuxt 3](/demo.png)](https://supabase-demo-gamma.vercel.app)
+![Demo supabase x nuxt](/demo.png){.rounded-lg}
 
 ## Live demo
 
-You can play with the demo on [https://supabase-demo-gamma.vercel.app](https://supabase-demo-gamma.vercel.app)
+You can play with the demo on <https://supabase-demo-gamma.vercel.app>
 
 ## Running locally
 
