--- a/docs/content/3.services/1.serverSupabaseClient.md
+++ b/docs/content/3.services/1.serverSupabaseClient.md
@@ -1,6 +1,7 @@
 ---
 title: serverSupabaseClient
-description: Make requests to the Supabase API on server side with the serverSupabaseClient service
+description: Make requests to the Supabase API on server side with the
+  serverSupabaseClient service
 ---
 
 ::warning
@@ -9,7 +10,7 @@ This section assumes you're familiar with [Nitro](https://v3.nuxtjs.org/guide/co
 
 This function is working similary as the [useSupabaseClient](/composables/usesupabaseclient) composable but is designed to be used in [server routes](https://nuxt.com/docs/guide/directory-structure/server#server-routes).
 
-Define your server route and just import the `serverSupabaseClient` from `#supabase/server`. Be careful,  `serverSupabaseClient` is returning a promise.
+Define your server route and just import the `serverSupabaseClient` from `#supabase/server`. Be careful, `serverSupabaseClient` is returning a promise.
 
 ```ts [server/api/libraries.ts]
 import { serverSupabaseClient } from '#supabase/server'
