--- a/docs/content/3.services/2.serverSupabaseServiceRole.md
+++ b/docs/content/3.services/2.serverSupabaseServiceRole.md
@@ -1,6 +1,7 @@
 ---
 title: serverSupabaseServiceRole
-description: Make requests with super admin rights to the Supabase API with the serverSupabaseServiceRole service
+description: Make requests with super admin rights to the Supabase API with the
+  serverSupabaseServiceRole service
 navigation:
   title: serverSupabaseServiceRole
 ---
