--- a/docs/content/1.getting-started/1.introduction.md
+++ b/docs/content/1.getting-started/1.introduction.md
@@ -1,6 +1,6 @@
 ---
 title: Introduction
-description: '@nuxtjs/supabase is a Nuxt module for first class integration with Supabase.'
+description: "@nuxtjs/supabase is a Nuxt module for first class integration with Supabase."
 ---
 
 [@nuxtjs/supabase](https://github.com/nuxt-modules/supabase) is a Nuxt module for first class integration with Supabase.
@@ -75,14 +75,14 @@ Default: `true`
 
 Controls whether the module uses cookies to share session info between server and client. You *must* enable this option if you need to access session or user info from the server. It will use the SSR client from the [@supabase/ssr](https://github.com/supabase/ssr) library.
 
-When disabled, the module will use the default Supabase client from  the [@supabase/supabase-js](https://github.com/supabase/supabase-js) library which stores session info in local storage. This is useful in certain cases, such as statically generated sites or mobile apps where cookies might not be available.
+When disabled, the module will use the default Supabase client from the [@supabase/supabase-js](https://github.com/supabase/supabase-js) library which stores session info in local storage. This is useful in certain cases, such as statically generated sites or mobile apps where cookies might not be available.
 
 ::warning
 When `useSsrCookies` is `true` the following options cannot be customized with `clientOptions`:
 
 - `flowType`, `autoRefreshToken`, `detectSessionInUrl`, `persistSession`, `storage`
 
-If you need to customize one of the above options, you must set `useSsrCookies` to `false`. Bear in mind that this will disable SSR support, you'll need to take care of it yourself if needed. 
+If you need to customize one of the above options, you must set `useSsrCookies` to `false`. Bear in mind that this will disable SSR support, you'll need to take care of it yourself if needed.
 ::
 
 ### `redirect`
@@ -109,7 +109,7 @@ Default:
 - `callback`: This is the path the user will be redirect to after supabase login redirection. Should match configured `redirectTo` option of your [signIn method](https://supabase.com/docs/reference/javascript/auth-signinwithoauth). Should also be configured in your Supabase dashboard under `Authentication -> URL Configuration -> Redirect URLs`.
 - `include`: Routes to include in the redirect. `['/admin(/*)?']` will enable the redirect only for the `admin` page and all sub-pages.
 - `exclude`: Routes to exclude from the redirect. `['/foo', '/bar/**']` will exclude the `foo` page and all pages in your `bar` folder.
-- `saveRedirectToCookie`: Automatically sets a cookie containing the path an unauthenticated user tried to access. The value can be accessed using the [`useSupabaseCookieRedirect`](/composables/usesupabasecookieredirect) composable to redirect the user to the page they previously tried to visit. 
+- `saveRedirectToCookie`: Automatically sets a cookie containing the path an unauthenticated user tried to access. The value can be accessed using the [`useSupabaseCookieRedirect`](/composables/usesupabasecookieredirect) composable to redirect the user to the page they previously tried to visit.
 
 ### `cookiePrefix`
 
@@ -198,8 +198,8 @@ Use the `cookieRedirect` option to store the redirect path in a cookie.
 
 ## Demo
 
-A live demo is made for you to see this module in action on [https://supabase-demo-gamma.vercel.app](https://supabase-demo-gamma.vercel.app), read more in the [demo section](/getting-started/demo).
+A live demo is made for you to see this module in action on <https://supabase-demo-gamma.vercel.app>, read more in the [demo section](/getting-started/demo).
 
-[![Supabase demo with Nuxt 3](/demo.png)](https://supabase-demo-gamma.vercel.app)
+![Demo supabase x nuxt](/demo.png){.rounded-lg}
 
 Also checkout the [YouTube video](https://www.youtube.com/watch?v=jIyiRT6zT8Q) about its usage in a live demo.
