--- a/docs/content/3.services/3.serverSupabaseSession.md
+++ b/docs/content/3.services/3.serverSupabaseSession.md
@@ -1,6 +1,7 @@
 ---
 title: serverSupabaseSession
-description: Get your Supabase user's session from serverside with the serverSupabaseUser service
+description: Get your Supabase user's session from serverside with the
+  serverSupabaseUser service
 ---
 
 ::warning
@@ -10,7 +11,7 @@ This section assumes you're familiar with [Nitro](https://v3.nuxtjs.org/guide/co
 This function is similar to the [useSupabaseSession](/composables/usesupabasesession) composable but is used in [server routes](https://nuxt.com/docs/guide/directory-structure/server#server-routes).
 
 ::warning
-Be advised that `serverSupabaseSession` is considered unsafe, since the session comes from the client and users can tamper with it. For checking if the user is logged in, always use  [serverSupabaseUser](/services/serversupabaseuser)
+Be advised that `serverSupabaseSession` is considered unsafe, since the session comes from the client and users can tamper with it. For checking if the user is logged in, always use [serverSupabaseUser](/services/serversupabaseuser)
 ::
 
 Define your server route and import the `serverSupabaseSession` from `#supabase/server`.
