docs(demo): fix links

--- a/docs/content/1.getting-started/3.demo.md
+++ b/docs/content/1.getting-started/3.demo.md
@@ -13,8 +13,8 @@ You can play with the demo on <https://supabase-demo-gamma.vercel.app>
 
 ## Running locally
 
-Follow the instruction in the [demo Readme](https://github.com/nuxt-community/supabase-module/tree/main/getting-started/demo).
+Follow the instruction in the [demo Readme](https://github.com/nuxt-modules/supabase/blob/main/demo/README.md).
 
 ## Source code
 
-The source code is available on Github in the [demo/ directory](https://github.com/nuxt-community/supabase-module/tree/main/getting-started/demo).
+The source code is available on Github in the [demo/ directory](https://github.com/nuxt-modules/supabase/tree/main/demo).
