--- a/docs/content/1.getting-started/2.authentication.md
+++ b/docs/content/1.getting-started/2.authentication.md
@@ -106,7 +106,7 @@ watch(user, () => {
 If you want to manually set the redirect path, you can do so by disabling [`saveRedirectToCookie`](/getting-started/introduction#redirectoptions), and then set the value using the  [`useSupabaseCookieRedirect`](/composables/usesupabasecookieredirect) composable directly.
 ::
 
-### Reset Password
+## Reset Password
 
 You can easily handle password reset request for the user. The flow consist of 2 steps:
 
