--- a/docs/content/1.getting-started/2.authentication.md
+++ b/docs/content/1.getting-started/2.authentication.md
@@ -113,7 +113,7 @@ You can easily handle password reset request for the user. The flow consist of 2
 1. Allow the user to login via the password reset link. When the user clicks the reset link in the email they are redirected back to your application.
 
 
-```vue [pages/confirm.vue]
+```vue [pages/password/reset.vue]
 <script setup lang="ts">
 const supabase = useSupabaseClient()
 const email = ref('')
