--- a/docs/content/1.getting-started/2.authentication.md
+++ b/docs/content/1.getting-started/2.authentication.md
@@ -120,7 +120,7 @@ const email = ref('')
 
 const requestResetPassword = async () => {
   const { data, error } = await supabase.auth.resetPasswordForEmail(email.value, {
-    redirectTo: 'https://example.com/update-password',
+    redirectTo: 'https://example.com/password/update',
   })
   if (error) console.log(error)
 }
