--- a/docs/content/1.getting-started/2.authentication.md
+++ b/docs/content/1.getting-started/2.authentication.md
@@ -146,7 +146,7 @@ You can configure the URL that the user is redirected to with the `redirectTo` p
 2. After the user has been redirected successfully, prompt them for a new password and call `updateUser()`:
 
 
-```vue [pages/confirm.vue]
+```vue [pages/password/update.vue]
 <script setup lang="ts">
 const supabase = useSupabaseClient()
 const newPassword = ref('')
