--- a/docs/content/1.getting-started/2.authentication.md
+++ b/docs/content/1.getting-started/2.authentication.md
@@ -175,7 +175,7 @@ const updateUserPassword = async () => {
 You can also watch for the event `PASSWORD_RECOVERY` that will be emitted when the password recovery link is clicked. You can use `onAuthStateChange()` to listen and invoke a callback function on these events.
 
 
-```vue [pages/confirm.vue]
+```vue [pages/password/update.vue]
 <script setup lang="ts">
 const supabase = useSupabaseClient()
 const newPassword = ref('')
