--- a/docs/content/1.getting-started/2.authentication.md
+++ b/docs/content/1.getting-started/2.authentication.md
@@ -178,7 +178,7 @@ You can also watch for the event `PASSWORD_RECOVERY` that will be emitted when t
 ```vue [pages/password/update.vue]
 <script setup lang="ts">
 const supabase = useSupabaseClient()
-const newPassword = ref('')
+const password = generateRandomPassword()
 
 watch(newPassword, () => {
   supabase.auth.onAuthStateChange(async (event, session) => {
