--- a/docs/content/1.getting-started/2.authentication.md
+++ b/docs/content/1.getting-started/2.authentication.md
@@ -184,7 +184,7 @@ watch(newPassword, () => {
   supabase.auth.onAuthStateChange(async (event, session) => {
     if (event == "PASSWORD_RECOVERY") {
       const { data, error } = await supabase.auth
-        .updateUser({ password: newPassword.value })
+        .updateUser({ password })
 
       if (data) alert("Password updated successfully!")
       if (error) alert("There was an error updating your password.")
