--- a/docs/content/1.getting-started/2.authentication.md
+++ b/docs/content/1.getting-started/2.authentication.md
@@ -110,8 +110,9 @@ If you want to manually set the redirect path, you can do so by disabling [`save
 
 You can easily handle password reset request for the user. The flow consist of 2 steps:
 
-1. Allow the user to login via the password reset link. When the user clicks the reset link in the email they are redirected back to your application.
+::steps
 
+#### Allow the user to login via the password reset link. When the user clicks the reset link in the email they are redirected back to your application.
 
 ```vue [pages/password/reset.vue]
 <script setup lang="ts">
@@ -143,8 +144,7 @@ const requestResetPassword = async () => {
 You can configure the URL that the user is redirected to with the `redirectTo` parameter. 
 ::
 
-2. After the user has been redirected successfully, prompt them for a new password and call `updateUser()`:
-
+#### After the user has been redirected successfully, prompt them for a new password and call `updateUser()`
 
 ```vue [pages/password/update.vue]
 <script setup lang="ts">
@@ -172,8 +172,9 @@ const updateUserPassword = async () => {
 </template>
 ```
 
-You can also watch for the event `PASSWORD_RECOVERY` that will be emitted when the password recovery link is clicked. You can use `onAuthStateChange()` to listen and invoke a callback function on these events.
+::
 
+You can also watch for the event `PASSWORD_RECOVERY` that will be emitted when the password recovery link is clicked. You can use `onAuthStateChange()` to listen and invoke a callback function on these events.
 
 ```vue [pages/password/update.vue]
 <script setup lang="ts">
